--- a/keycloak-connect-graphql/package.json
+++ b/keycloak-connect-graphql/package.json
@@ -34,7 +34,8 @@
     "examples:seed": "node scripts/initKeycloak.js"
   },
   "dependencies": {
-    "@graphql-tools/utils": "7.2.3"
+    "@graphql-tools/utils": "7.2.3",
+    "keycloak-connect-graphql": "^0.7.0"
   },
   "devDependencies": {
     "@types/express-session": "1.17.3",
@@ -42,6 +43,7 @@
     "@types/keycloak-connect": "4.5.4",
     "@types/node": "10.17.50",
     "@types/sinon": "9.0.10",
+    "apollo-server-express": "2.19.1",
     "ava": "2.4.0",
     "cors": "2.8.5",
     "coveralls": "3.1.0",
@@ -49,16 +51,15 @@
     "express-session": "1.17.1",
     "graphql": "15.4.0",
     "graphql-subscriptions": "1.1.0",
-    "keycloak-request-token": "0.1.0",
     "keycloak-admin": "1.14.4",
+    "keycloak-connect": "12.0.1",
+    "keycloak-request-token": "0.1.0",
     "nyc": "15.1.0",
     "sinon": "9.2.2",
     "subscriptions-transport-ws": "0.9.18",
     "ts-node": "9.1.1",
     "tslint": "5.20.1",
-    "typescript": "4.1.3",
-    "apollo-server-express": "2.19.1",
-    "keycloak-connect": "12.0.1"
+    "typescript": "4.1.3"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
