--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@emotion/react": "latest",
     "@emotion/styled": "v11.6.0",
     "@mui/icons-material": "latest",
@@ -10,6 +11,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-link-ws": "^1.0.20",
+    "graphql": "^16.3.0",
+    "graphql-ws": "^5.6.2",
+    "keycloak-js": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
