--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "keycloak-js": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.16",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
