new automatic setup, cleaning up some files and added the configuration from anubis's keycloack

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#automatic setup
+keycloak-connect-graphql/examples/config/config/*
+keycloak-connect-graphql/examples/config/realm-export
+
 # Logs
 logs
 *.log
