--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #automatic setup
 keycloak-connect-graphql/examples/config/config/*
 keycloak-connect-graphql/examples/config/realm-export
+keycloak
 
 # Logs
 logs
