--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "apollo-link-ws": "^1.0.20",
+    "axios": "^0.26.1",
     "graphql": "^16.3.0",
-    "graphql-ws": "^5.6.2",
+    "graphql-ws": "^5.6.3",
     "keycloak-js": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "subscriptions-transport-ws": "^0.9.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
