--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
+    "jwt-decode": "^3.1.2",
     "keycloak-js": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
