--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^3.1.2",
     "keycloak-js": "^17.0.0",
     "react": "^17.0.2",
+    "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
