--- a/graphqlConfig/package.json
+++ b/graphqlConfig/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@graphql-tools/utils": "7.2.3",
+    "dotenv": "^16.0.0",
     "mongoose": "^6.2.11"
   },
   "devDependencies": {
