the graphql folder is now called: graphql-server , removed test as a mongo document, env names changed , cariage returns , removed everything that it wasn't needed inside graphql-server

--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@graphql-tools/utils": "7.2.3",
     "dotenv": "^16.0.0",
+    "keycloak-connect-graphql": "^0.7.0",
     "mongoose": "^6.2.11"
   },
   "devDependencies": {
