--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "keycloak-connect-graphql",
+  "name": "graphql-server",
   "version": "0.7.0",
-  "description": "Add Keycloak authentication and authorization to your GraphQL server.",
   "keywords": [
     "graphql",
     "apollo",
@@ -9,13 +8,6 @@
     "authentication",
     "express"
   ],
-  "author": "AeroGear Team<aerogear@googlegroups.com>",
-  "homepage": "http://aerogear.org",
-  "license": "Apache-2.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/aerogear/keycloak-connect-graphql"
-  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
@@ -34,54 +26,26 @@
     "examples:seed": "node scripts/initKeycloak.js"
   },
   "dependencies": {
-    "@graphql-tools/utils": "7.2.3"
-  },
-  "devDependencies": {
+    "@graphql-tools/utils": "7.2.3",
+    "dotenv": "^16.0.0",
+    "keycloak-connect-graphql": "^0.7.0",
+    "mongoose": "^6.2.11",
     "@types/express-session": "1.17.3",
     "@types/graphql": "14.2.3",
     "@types/keycloak-connect": "4.5.4",
     "@types/node": "10.17.50",
     "@types/sinon": "9.0.10",
-    "ava": "2.4.0",
+    "apollo-server-express": "2.19.1",
     "cors": "2.8.5",
     "coveralls": "3.1.0",
     "express": "4.17.1",
     "express-session": "1.17.1",
     "graphql": "15.4.0",
     "graphql-subscriptions": "1.1.0",
-    "keycloak-request-token": "0.1.0",
     "keycloak-admin": "1.14.4",
-    "nyc": "15.1.0",
+    "keycloak-connect": "12.0.1",
+    "keycloak-request-token": "0.1.0",
     "sinon": "9.2.2",
-    "subscriptions-transport-ws": "0.9.18",
-    "ts-node": "9.1.1",
-    "tslint": "5.20.1",
-    "typescript": "4.1.3",
-    "apollo-server-express": "2.19.1",
-    "keycloak-connect": "12.0.1"
-  },
-  "peerDependencies": {
-    "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
-    "keycloak-connect": ">=9.0.0"
-  },
-  "nyc": {
-    "extension": [
-      ".ts"
-    ],
-    "include": [
-      "src/**/*.ts"
-    ]
-  },
-  "ava": {
-    "compileEnhancements": false,
-    "extensions": [
-      "ts"
-    ],
-    "files": [
-      "**/*.test.ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ]
+    "subscriptions-transport-ws": "0.9.18"
   }
 }
