--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@apollo/client": "^3.5.10",
     "@emotion/react": "latest",
     "@emotion/styled": "v11.6.0",
-    "@mui/icons-material": "latest",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "latest",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
