multi-language support and language preferences, saved by the user

--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "colord": "^2.9.2",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "keycloak-js": "^17.0.0",
     "react": "^17.0.2",
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.7",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
