--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,10 +5,12 @@ on:
   # but only for the main branch
   push:
     branches:
-      - master
+      - main
   # Replace pull_request with pull_request_target if you
   # plan to use this action with forks, see the Limitations section
   pull_request:
+    branches:
+      - main
 
 # Down scope as necessary via https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
 permissions:
@@ -31,7 +33,7 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm ci --include=dev
+        run: npm ci
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
@@ -39,3 +41,4 @@ jobs:
           eslint: true
           prettier: true
           auto_fix: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
