--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@apollo/client": "^3.5.10",
     "@emotion/react": "latest",
     "@emotion/styled": "v11.6.0",
-    "@mui/icons-material": "latest",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "latest",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -16,11 +16,15 @@
     "colord": "^2.9.2",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "keycloak-js": "^17.0.0",
     "react": "^17.0.2",
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.7",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
@@ -31,7 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fix-lints": "standardx src/**/*.ts src/**/*.tsx --fix"
   },
   "eslintConfig": {
     "extends": [
