--- a/documentation/package.json
+++ b/documentation/package.json
@@ -23,5 +23,7 @@
     "@storybook/testing-library": "^0.0.11",
     "babel-loader": "^8.2.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@storybook/addon-docs": "^6.5.6"
+  }
 }
