fix linter workflow config

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,6 +37,6 @@ jobs:
         uses: wearerequired/lint-action@v1
         with:
           eslint: true
-          prettier: true
+          prettier: false
           auto_fix: true
           github_token: ${{ secrets.TOKEN }}
