--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,12 +31,9 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm ci --include=dev
+        run: npm ci --include=dev --no-audit --prefer-offline
 
-      - name: Run linters
-        uses: wearerequired/lint-action@v1
+      - uses: tinovyatkin/action-eslint@v1
         with:
-          eslint: true
-          prettier: false
-          auto_fix: true
-          github_token: ${{ secrets.TOKEN }}
+          repo-token: ${{secrets.TOKEN}}
+          check-name: eslint # this is the check name from above 👆 where to post annotations
