--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -27,9 +27,6 @@
   },
   "dependencies": {
     "@graphql-tools/utils": "7.2.3",
-    "dotenv": "^16.0.0",
-    "keycloak-connect-graphql": "^0.7.0",
-    "mongoose": "^6.2.11",
     "@types/express-session": "1.17.3",
     "@types/graphql": "14.2.3",
     "@types/keycloak-connect": "4.5.4",
@@ -38,13 +35,21 @@
     "apollo-server-express": "3.1.2",
     "cors": "2.8.5",
     "coveralls": "3.1.0",
+    "dotenv": "^16.0.0",
     "express": "4.17.1",
     "express-session": "1.17.1",
     "graphql": "15.4.0",
+    "graphql-passport": "^0.6.4",
     "graphql-subscriptions": "1.1.0",
     "keycloak-admin": "1.14.4",
     "keycloak-connect": "12.0.1",
+    "keycloak-connect-graphql": "^0.7.0",
     "keycloak-request-token": "0.1.0",
+    "mongoose": "^6.2.11",
+    "passport": "^0.6.0",
+    "passport-keycloak-bearer": "^2.1.0",
+    "passport-keycloak-oauth2-oidc": "^1.0.5",
+    "passport-openid": "^0.4.0",
     "sinon": "9.2.2",
     "subscriptions-transport-ws": "0.9.18"
   }
