--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -1,35 +1,25 @@
 {
-  "name": "graphql-server",
-  "version": "0.7.0",
+  "name": "auth-graphql-server",
+  "version": "0.1.0",
   "keywords": [
     "graphql",
     "apollo",
-    "keycloak",
+    "oidc",
     "authentication",
-    "express"
+    "express",
+    "passport"
   ],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
-    "compile": "tsc --build",
-    "watch": "tsc --build tsconfig.json --watch",
-    "compile:clean": "tsc --build tsconfig.json --clean",
+    "clean": "rm -rf package-lock.json && rm -rf node_modules && rm -rf coverage",
+    "lint": "eslint main/ --cache --fix",
     "test": "nyc ava -v",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "lint": "tslint '*/*/src/**/*.ts' --exclude 'src/**/*.test.ts' && tslint -c tslint_tests.json 'src/**/*.test.ts'",
-    "release:prep": "./scripts/prepareRelease.sh",
-    "release:validate": "./scripts/validateRelease.sh",
-    "release:publish": "./scripts/publishRelease.sh",
-    "examples:seed": "node scripts/initKeycloak.js"
+    "prettier": "prettier --config .prettierrc.json --write '**/**/**/*.js' '**/**/*.js' '**/*.js'",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "@graphql-tools/utils": "7.2.3",
     "@types/express-session": "1.17.3",
     "@types/graphql": "14.2.3",
-    "@types/keycloak-connect": "4.5.4",
     "@types/node": "10.17.50",
     "@types/sinon": "9.0.10",
     "apollo-server-express": "3.1.2",
@@ -41,17 +31,15 @@
     "graphql": "15.4.0",
     "graphql-passport": "^0.6.4",
     "graphql-subscriptions": "1.1.0",
-    "keycloak-admin": "1.14.4",
-    "keycloak-connect": "12.0.1",
-    "keycloak-connect-graphql": "^0.7.0",
-    "keycloak-request-token": "0.1.0",
+    "logops": "^2.1.2",
     "mongoose": "^6.2.11",
     "openid-client": "^5.1.6",
     "passport": "^0.6.0",
-    "passport-keycloak-bearer": "^2.1.0",
-    "passport-keycloak-oauth2-oidc": "^1.0.5",
-    "passport-openid": "^0.4.0",
     "sinon": "9.2.2",
     "subscriptions-transport-ws": "0.9.18"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0",
+    "prettier": "2.6.2"
   }
 }
