--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -29,12 +29,12 @@
     "express": "4.17.1",
     "express-session": "1.17.1",
     "graphql": "15.4.0",
-    "graphql-passport": "^0.6.4",
     "graphql-subscriptions": "1.1.0",
+    "jwks-rsa": "^2.1.4",
     "logops": "^2.1.2",
     "mongoose": "^6.2.11",
-    "openid-client": "^5.1.6",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "sinon": "9.2.2",
     "subscriptions-transport-ws": "0.9.18"
   },
