--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,31 @@
 {
   "env": {
+    "node": true,
     "browser": true,
-    "es2021": true
-  },
+    "es6": true
+   },
   "extends": ["plugin:react/recommended", "eslint:recommended"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
     "ecmaVersion": 2021,
-    "sourceType": "module"
+    "sourceType": "module",
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
+   },
+    "requireConfigFile": false
   },
   "plugins": ["react"],
   "rules": {
     "react/prop-types": "off"
   },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "parser": "@babel/eslint-parser",
   "globals": {
       "process": true
   }
