--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,32 @@
 {
   "env": {
+    "node": true,
     "browser": true,
-    "es2021": true
-  },
-  "extends": ["plugin:react/recommended", "standard"],
+    "es6": true
+   },
+  "extends": ["plugin:react/recommended", "eslint:recommended"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
+   },
+    "requireConfigFile": false
   },
   "plugins": ["react"],
-  "rules": {}
+  "rules": {
+    "react/prop-types": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "parser": "@babel/eslint-parser",
+  "globals": {
+      "process": true
+  }
 }
