--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,27 @@ services:
     networks:
       - envoymesh
 
+  UI:
+    build:
+      context: ./
+      dockerfile: ./Dockerfile
+    image: "webapp"
+    ports:
+      - "3000:3000"
+    networks:
+      - envoymesh
+
+  graphql-server:
+    build:
+      context: ./graphql-server
+      dockerfile: ./Dockerfile
+    env_file: .env
+    image: "graphql-server"
+    ports:
+      - "4000:4000"
+    networks:
+      - envoymesh
+
 volumes:
   mongodata:
 
