--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@axa-fr/react-oidc": "^5.10.7",
     "@emotion/react": "latest",
     "@emotion/styled": "v11.6.0",
     "@mui/icons-material": "^5.6.2",
@@ -14,6 +15,7 @@
     "apollo-link-ws": "^1.0.20",
     "axios": "^0.26.1",
     "colord": "^2.9.2",
+    "copyfiles": "^2.4.1",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
     "i18next": "^21.6.16",
@@ -36,7 +38,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "fix-lints": "standardx src/**/*.ts src/**/*.tsx --fix"
+    "lint": "eslint --fix --ext .js,.jsx ."
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.17.12",
     "eslint": "^8.14.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
