--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/no-unescaped-entities": 0
   },
   "settings": {
     "react": {
