--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,3 +40,15 @@ jobs:
       - name: ESLint Documentation
         run: npx --no-install eslint . --ext .js,.jsx --cache --fix
         working-directory: documentation
+  markdown:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        ref: ${{github.event.pull_request.head.ref}}
+        repository: ${{github.event.pull_request.head.repo.full_name}}
+    - name: Lint
+      uses: docker://avtodev/markdown-lint:v1 # fastest way
+      with:
+        config: '.github/lint/config.json'
+        args: '**/*.md'
