--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,9 @@ services:
       - envoymesh
 
   keycloak:
-    image: jboss/keycloak:${KEYCLOAK_VERSION:-16.1.1}
+    #image: jboss/keycloak:${KEYCLOAK_VERSION:-16.1.1}
     # if your platform is linux/arm64 use the following image
-    # image: koolwithk/keycloak-arm:16.0.0
+    image: koolwithk/keycloak-arm:16.0.0
     ports:
       - "8080:8080"
     volumes:
@@ -42,22 +42,22 @@ services:
     networks:
       - envoymesh
 
-  UI:
+  management-ui:
     build:
       context: ./
       dockerfile: ./Dockerfile
-    image: "webapp"
+    image: orchestracities/management-ui
     ports:
       - "3000:3000"
     networks:
       - envoymesh
 
-  graphql-server:
+  configuration-api:
     build:
-      context: ./graphql-server
+      context: ./configuration-api
       dockerfile: ./Dockerfile
     env_file: .env
-    image: "graphql-server"
+    image: orchestracities/configuration-api
     ports:
       - "4000:4000"
     networks:
