--- a/documentation/package.json
+++ b/documentation/package.json
@@ -7,13 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "lint": "eslint --fix --ext .js,.jsx ."
+    "lint": "eslint --fix --ext .js,.jsx .",
+    "chromatic": "npx chromatic --project-token=36b63a5f4dbe"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
     "@storybook/addon-actions": "^6.5.5",
     "@storybook/addon-essentials": "^6.5.5",
     "@storybook/addon-interactions": "^6.5.5",
@@ -23,7 +25,7 @@
     "@storybook/react": "^6.5.5",
     "@storybook/testing-library": "^0.0.11",
     "babel-loader": "^8.2.5",
-    "@babel/preset-react": "^7.17.12",
+    "chromatic": "^6.6.4",
     "eslint": "^8.14.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -34,5 +36,7 @@
   },
   "dependencies": {
     "@storybook/addon-docs": "^6.5.6"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "documentation@1.0.0"
 }
