--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,8 +11,7 @@ on:
   pull_request:
 
 jobs:
-  run-linters:
-    name: Run linters
+  javascript:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,7 +24,19 @@ jobs:
           node-version: 12
 
       # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
+      - name: Install Node.js dependencies Management UI
         run: npm ci
-      - name: ESLint
-        run: npx --no-install eslint src/ graphql-server/ --cache
+      - name: ESLint Management UI
+        run: npx --no-install eslint src/ --cache --fix
+      - name: Install Node.js dependencies Configuration API
+        run: npm ci
+        working-directory: graphql-server
+      - name: ESLint Configuration API
+        run: npx --no-install eslint main/ --cache --fix
+        working-directory: graphql-server
+      - name: Install Node.js dependencies Documentation
+        run: npm ci
+        working-directory: documentation
+      - name: ESLint Documentation
+        run: npx --no-install eslint . --ext .js,.jsx --cache --fix
+        working-directory: documentation
