--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,10 +30,10 @@ jobs:
         run: npx --no-install eslint src/ --cache --fix
       - name: Install Node.js dependencies Configuration API
         run: npm ci
-        working-directory: graphql-server
+        working-directory: configuration-api
       - name: ESLint Configuration API
         run: npx --no-install eslint main/ --cache --fix
-        working-directory: graphql-server
+        working-directory: configuration-api
       - name: Install Node.js dependencies Documentation
         run: npm ci
         working-directory: documentation
