--- a/.github/workflows/release_notes.yml
+++ b/.github/workflows/release_notes.yml
@@ -4,8 +4,7 @@ on:
     branches:
       - 'master'
 jobs:
-  build:
-    name: Check Actions
+  release_notes:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
