fix ui docker image generation to use dynamic env variables

--- a/.env.docker
+++ b/.env.docker
@@ -9,3 +9,7 @@ CONFIGURATION_API_PORT=4000
 LOGOPS_LEVEL=DEBUG
 JWKS_URL=http://keycloak:8080/auth/realms/master/protocol/openid-connect/certs
 
+#Envs that will be used to customize the index.html
+
+REACT_APP_TITLE=Anubis
+REACT_APP_DESCRIPTION=A Management UI for Anubis
