--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,9 +46,10 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile
+    env_file: .env
     image: orchestracities/management-ui
     ports:
-      - "3000:3000"
+      - "3000:80"
     networks:
       - envoymesh
 
