--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -95,6 +95,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Install Node.js dependencies Management UI
+        run: |
+              npx generate-env-getter js
       -
         name: Build and push
         uses: docker/build-push-action@v2
