--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -22,6 +22,9 @@ jobs:
     # Job steps
     steps:
       - uses: actions/checkout@v1
+      -
+        name: Generate env file
+        run: cp .env.docker .env
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
@@ -29,7 +32,7 @@ jobs:
       - name: Install Node.js dependencies Management UI
         run: |
               npm ci
-              npx generate-env-getter js   
+              npx generate-env-getter js
       - name: Install Node.js dependencies Documentation
         run: npm ci
         working-directory: documentation
