--- a/.env.development
+++ b/.env.development
@@ -12,4 +12,4 @@ JWKS_URL=http://localhost:8080/auth/realms/master/protocol/openid-connect/certs
 #Envs that will be used to customize the index.html
 
 REACT_APP_TITLE=Anubis
-REACT_APP_DESCRIPTION=A Management UI for Anubis
+REACT_APP_DESCRIPTION="A Management UI for Anubis"
