--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "browser": true,
     "es6": true
    },
-  "extends": ["plugin:react/recommended", "eslint:recommended"],
+  "extends": ["plugin:react/recommended", "eslint:recommended", "plugin:prettier/recommended"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
