--- a/configuration-api/package.json
+++ b/configuration-api/package.json
@@ -40,6 +40,8 @@
   },
   "devDependencies": {
     "eslint": "^8.14.0",
-    "prettier": "2.6.2"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.6.2"
   }
 }
