--- a/documentation/package.json
+++ b/documentation/package.json
@@ -8,6 +8,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "eslint --fix --ext .js,.jsx .",
+    "prettier": "prettier --write './**/*.{js,jsx}' --config .prettierrc.json",
     "chromatic": "npx chromatic --project-token=36b63a5f4dbe"
   },
   "keywords": [],
@@ -27,12 +28,14 @@
     "babel-loader": "^8.2.5",
     "chromatic": "^6.6.4",
     "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "prettier": "2.6.2"
+    "prettier": "^2.6.2"
   },
   "dependencies": {
     "@storybook/addon-docs": "^6.5.6"
