--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx .",
     "prestart": "generate-env-getter js",
-    "pretest": "generate-env-getter js"
+    "pretest": "generate-env-getter js",
+    "prettier": "prettier --write './**/*.{js,jsx}' --config .prettierrc.json"
   },
   "eslintConfig": {
     "extends": [
@@ -65,11 +66,13 @@
   "devDependencies": {
     "@babel/preset-react": "^7.17.12",
     "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "prettier": "2.6.2"
+    "prettier": "^2.6.2"
   }
 }
