uniform prettier / add semi for valerio's happiness

--- a/configuration-api/.prettierrc.json
+++ b/configuration-api/.prettierrc.json
@@ -1,6 +1,6 @@
 {
   "arrowParens": "always",
-  "semi": false,
+  "semi": true,
   "bracketSpacing": true,
   "singleQuote": true,
   "parser": "flow",
