--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -22,6 +22,9 @@ jobs:
     # Job steps
     steps:
       - uses: actions/checkout@v1
+      -
+        name: Generate env file
+        run: cp .env.docker .env
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
