--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "colord": "^2.9.2",
     "copyfiles": "^2.4.1",
+    "cra-envs": "^1.2.6",
     "graphql": "^16.3.0",
     "graphql-ws": "^5.6.3",
     "i18next": "^21.6.16",
@@ -39,7 +40,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --fix --ext .js,.jsx ."
+    "lint": "eslint --fix --ext .js,.jsx .",
+    "prestart": "generate-env-getter js",
+    "pretest": "generate-env-getter js"
   },
   "eslintConfig": {
     "extends": [
