--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx .",
-    "prestart": "generate-env-getter js",
-    "pretest": "generate-env-getter js",
+    "prestart": "generate-env-getter js && prettier --write './**/*.{js,jsx}' --config .prettierrc.json",
+    "pretest": "generate-env-getter js && prettier --write './**/*.{js,jsx}' --config .prettierrc.json",
     "prettier": "prettier --write './**/*.{js,jsx}' --config .prettierrc.json"
   },
   "eslintConfig": {
