--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth-management-ui",
-  "version": "0.2.0",
+  "version": "0.3.0-dev",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -41,8 +41,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx .",
-    "prestart": "generate-env-getter js",
-    "pretest": "generate-env-getter js",
+    "prestart": "generate-env-getter js && prettier --write './**/*.{js,jsx}' --config .prettierrc.json",
+    "pretest": "generate-env-getter js && prettier --write './**/*.{js,jsx}' --config .prettierrc.json",
     "prettier": "prettier --write './**/*.{js,jsx}' --config .prettierrc.json"
   },
   "eslintConfig": {
