added the possibility to add a custom icon on the tenant

--- a/configuration-api/package.json
+++ b/configuration-api/package.json
@@ -28,14 +28,19 @@
     "dotenv": "^16.0.0",
     "express": "4.17.1",
     "express-session": "1.17.1",
-    "graphql": "15.4.0",
+    "graphql": "^15.8.0",
     "graphql-subscriptions": "1.1.0",
+    "graphql-upload-minimal": "^1.5.3",
+    "gridfs-stream": "^1.1.1",
     "jwks-rsa": "^2.1.4",
     "logops": "^2.1.2",
     "mongoose": "^6.2.11",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "sinon": "9.2.2",
+    "streamifier": "^0.1.1",
     "subscriptions-transport-ws": "0.9.18"
   },
   "devDependencies": {
