--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -1,13 +1,9 @@
 name: Graphql-tests
-env_file:
-  - ../.env
-'on':
+on:
   push:
+    branches:
+      - master
   pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
 jobs:
   test:
     name: 'Node.js v${{ matrix.node }}'
@@ -17,18 +13,15 @@ jobs:
         node:
           - 14
     steps:
+       - name: Generate env file
+        run: cp .env.docker .env
+      - name: Set up Node.js
       - uses: actions/setup-node@v1
         with:
           node-version: '${{ matrix.node }}'
-      - uses: actions/checkout@v2
-      - name: 'Cache node_modules'
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-v${{ matrix.node }}-
-      - name: Install Dependencies
-        run: npm install
+      - name: Install Node.js dependencies Management UI
+        run: npm ci
+        working-directory: configuration-api
       - name: Run All Node.js Tests
         run: npm run test
+        working-directory: configuration-api
