--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -1,8 +1,6 @@
-name: Graphql tests
+name: Graphql-tests
 'on':
   push:
-   branches:
-      - master
   pull_request:
     types:
       - opened
@@ -28,6 +26,8 @@ jobs:
           key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
           restore-keys: |
             ${{ runner.os }}-node-v${{ matrix.node }}-
+      - name: move into the folder
+        run: cd configuration-api
       - name: Install Dependencies
         run: npm install
       - name: Run All Node.js Tests
