--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
         working-directory: configuration-api
+      - name: populate DB
+        run: node main/mongo/populateDB.js
+        working-directory: configuration-api
       - name: start server
         run: node main/advancedAuth.js
         working-directory: configuration-api
