--- a/.env.development
+++ b/.env.development
@@ -4,10 +4,10 @@ REACT_APP_CONFIGURATION_API_URL=http://localhost:4000/configuration
 REACT_APP_OIDC_ISSUER=http://localhost:8080/auth/realms/master
 REACT_APP_OIDC_CLIENT=client1
 REACT_APP_OIDC_SCOPE="openid profile email"
-MONGO_DB=mongodb://mongo:27017/graphql
+MONGO_DB=mongodb://localhost:27017/graphql
 CONFIGURATION_API_PORT=4000
 LOGOPS_LEVEL=DEBUG
-JWKS_URL=http://keycloak:8080/auth/realms/master/protocol/openid-connect/certs
+JWKS_URL=http://localhost:8080/auth/realms/master/protocol/openid-connect/certs
 
 #Envs that will be used to customize the index.html
 
