--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -28,6 +28,8 @@ jobs:
           key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package.json') }}
           restore-keys: |
             ${{ runner.os }}-node-v${{ matrix.node }}-
+      - name: Setup Docker
+        run: sh start.sh dev
       - name: Install Dependencies
         run: npm install
         working-directory: configuration-api
