--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -29,7 +29,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-v${{ matrix.node }}-
       - name: Setup Docker
-        run: sh start.sh dev
+        run: npx generate-env-getter js && sh start.sh dev
       - name: Install Dependencies
         run: npm install
         working-directory: configuration-api
