--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: '${{ matrix.node }}'
       - uses: actions/checkout@v2
       - name: Generate env file
-        run: cp .env.development .env
+        run: cp .env.docker .env
       - name: 'Cache node_modules'
         uses: actions/cache@v2
         with:
@@ -29,7 +29,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-v${{ matrix.node }}-
       - name: Setup Docker
-        run: bash start.sh dev
+        run: bash start.sh
       - name: Install Dependencies
         run: npm install
         working-directory: configuration-api
@@ -42,3 +42,5 @@ jobs:
       - name: Run All Node.js Tests
         run: npm run test
         working-directory: configuration-api
+      - name: Setup Docker
+        run: bash stop.sh
