--- a/.github/workflows/graphQL_tests.yml
+++ b/.github/workflows/graphQL_tests.yml
@@ -37,10 +37,10 @@ jobs:
         run: nohup node main/mongo/populateDB.js
         working-directory: configuration-api
       - name: start server
-        run: node main/advancedAuth.js
+        run: docker compose up -d
         working-directory: configuration-api
       - name: Run All Node.js Tests
         run: npm run test
         working-directory: configuration-api
-      - name: Setup Docker
+      - name: stop Docker
         run: bash stop.sh
