--- a/configuration-api/package.json
+++ b/configuration-api/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "clean": "rm -rf package-lock.json && rm -rf node_modules && rm -rf coverage",
     "lint": "eslint main/ --cache --fix",
-    "test": "nyc ava -v",
+    "test": "mocha test/*.test.js",
     "prettier": "prettier --config .prettierrc.json --write '**/**/**/*.js' '**/**/*.js' '**/*.js'",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
@@ -28,7 +28,7 @@
     "dotenv": "^16.0.0",
     "express": "4.17.1",
     "express-session": "1.17.1",
-    "graphql": "^15.8.0",
+    "graphql": "^16.6.0",
     "graphql-subscriptions": "1.1.0",
     "graphql-upload-minimal": "^1.5.3",
     "gridfs-stream": "^1.1.1",
@@ -44,9 +44,13 @@
     "subscriptions-transport-ws": "0.9.18"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.6.2"
+    "graphql": "^16.6.0",
+    "mocha": "^10.0.0",
+    "prettier": "^2.6.2",
+    "supertest": "^6.2.4"
   }
 }
