--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -27,18 +27,17 @@ services:
       - envoymesh
 
   keycloak:
-    image: jboss/keycloak:${KEYCLOAK_VERSION:-16.1.1}
-    # if your platform is linux/arm64 use the following image
-    #image: koolwithk/keycloak-arm:16.0.0
+    image: quay.io/keycloak/keycloak:${KEYCLOAK_VERSION:-19.0.1}
     ports:
       - "8080:8080"
     volumes:
-      - ./keycloak/oc-custom.jar:/opt/jboss/keycloak/standalone/deployments/oc-custom.jar
-      - ./keycloak/realm-export.json:/opt/jboss/realm-export.json
+      - ./keycloak/oc-custom.jar:/opt/keycloak/providers/oc-custom.jar
+      - ./keycloak/realm-export.json:/opt/keycloak/data/import/realm-export.json
     environment:
-      - KEYCLOAK_USER=admin
-      - KEYCLOAK_PASSWORD=password
-      - JAVA_TOOL_OPTIONS=-Dkeycloak.profile.feature.scripts=enabled -Dkeycloak.migration.action=import -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.file=/opt/jboss/realm-export.json -Dkeycloak.migration.strategy=OVERWRITE_EXISTING
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+      - KC_FEATURES=scripts 
+    command: start-dev --import-realm
     networks:
       - envoymesh
 
