--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next-http-backend": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "keycloak-js": "^17.0.0",
+    "loglevel": "^1.8.0",
     "mui-file-dropzone": "^4.0.1",
     "notistack": "^2.0.5",
     "react": "^17.0.2",
