--- a/.env.docker
+++ b/.env.docker
@@ -5,6 +5,8 @@ REACT_APP_OIDC_ISSUER=http://localhost:8080/realms/default
 REACT_APP_OIDC_CLIENT=configuration
 REACT_APP_OIDC_SCOPE="openid profile email"
 REACT_APP_IMAGE_SIZE=20
+REACT_APP_LOG_LEVEL=debug
+
 MONGO_DB=mongodb://mongo:27017/graphql
 CONFIGURATION_API_PORT=4000
 LOGOPS_LEVEL=DEBUG
