--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,9 @@ REACT_APP_OIDC_CLIENT=configuration
 REACT_APP_OIDC_SCOPE="openid profile email"
 REACT_APP_IMAGE_SIZE=20
 REACT_APP_LOG_LEVEL=debug
+REACT_APP_KEYCLOACK_ADMIN=http://localhost:8080/admin/realms/default
+
+
 MONGO_DB=mongodb://localhost:27017/graphql
 CONFIGURATION_API_PORT=4000
 LOGOPS_LEVEL=DEBUG
