node 16 first tests

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,6 +14,10 @@ on:
 jobs:
   management-ui:
     runs-on: ubuntu-latest
+     strategy:
+      matrix:
+        node:
+          - 16
     steps:
       -
         name: Checkout
