changes on the pull request

--- a/.env.docker
+++ b/.env.docker
@@ -7,12 +7,12 @@ REACT_APP_OIDC_SCOPE="openid profile email"
 REACT_APP_IMAGE_SIZE=20
 REACT_APP_LOG_LEVEL=debug
 REACT_APP_KEYCLOACK_ADMIN=http://keycloak:8080/admin/realms/default
+REACT_APP_ORION=http://localhost:1026/v2/entities
 
 MONGO_DB=mongodb://mongo:27017/graphql
 CONFIGURATION_API_PORT=4000
 LOGOPS_LEVEL=DEBUG
 JWKS_URL=http://keycloak:8080/realms/default/protocol/openid-connect/certs
-FIWARE_SERVICE=http://localhost:1026/v2/entities
 
 #Envs that will be used to customize the index.html
 
